--- a/BuberDinner.Api/appsettings.Development.json
+++ b/BuberDinner.Api/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JwtSettings": {
+    "Secret": "super-csc-secret-key",
+    "ExpireMinutes": 60,
+    "Issuer": "BuberDinner",
+    "Audience": "BuberDinner"
   }
+
 }
