--- a/BuberDinner.Api/appsettings.json
+++ b/BuberDinner.Api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Secret": "super-csc-secret-key",
+    "ExpireMinutes": 60,
+    "Issuer": "BuberDinner",
+    "Audience": "BuberDinner"
+  }
 }
